--- a/airport-ui/src/style.css
+++ b/airport-ui/src/style.css
@@ -1,11 +1,7 @@
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+h1.init{
+  margin: 2.8rem 1.68rem 1.68rem 7.68rem !important;
+}
+
+body {
+z-index: 1000;
 }
